// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entra-app-registration - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Guides Microsoft Entra ID app registration, OAuth 2.0 authentication, and MSAL integration.
USE FOR: create app registration, register Azure AD app, configure OAuth, set up authentication, add API permissions, generate service principal, MSAL example, console app auth, Entra ID setup, Azure AD authentication.
DO NOT USE FOR: Azure RBAC or role assignments (use azure-rbac), Key Vault secrets (use azure-keyvault-expiration-audit), Azure resource security (use azure-security).
",
  "extractedKeywords": [
    "app",
    "assignments",
    "auth",
    "authentication",
    "azure",
    "azure-keyvault-expiration-audit",
    "azure-rbac",
    "azure-security",
    "bicep",
    "cli",
    "configure",
    "console",
    "create",
    "entra",
    "example",
    "generate",
    "guides",
    "identity",
    "integration",
    "key vault",
    "keyvault",
    "mcp",
    "microsoft",
    "monitor",
    "msal",
    "oauth",
    "permissions",
    "principal",
    "rbac",
    "register",
    "registration",
    "resource",
    "role",
    "secrets",
    "security",
    "service",
    "setup",
    "vault",
  ],
  "name": "entra-app-registration",
}
`;

exports[`entra-app-registration - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "app",
  "assignments",
  "auth",
  "authentication",
  "azure",
  "azure-keyvault-expiration-audit",
  "azure-rbac",
  "azure-security",
  "bicep",
  "cli",
  "configure",
  "console",
  "create",
  "entra",
  "example",
  "generate",
  "guides",
  "identity",
  "integration",
  "key vault",
  "keyvault",
  "mcp",
  "microsoft",
  "monitor",
  "msal",
  "oauth",
  "permissions",
  "principal",
  "rbac",
  "register",
  "registration",
  "resource",
  "role",
  "secrets",
  "security",
  "service",
  "setup",
  "vault",
]
`;
